kustomize/overlay/prod/pasan-test-prod-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: pasan-test-prod
  labels:
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
    projectId: project_25d97b21-0f94-4051-98e4-58c689ea716a
    environmentId: env_869bf3f8-a609-4f98-be42-7487d62000bf
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_869bf3f8-a609-4f98-be42-7487d62000bf
    - from:
        - namespaceSelector:
            matchLabels:
              name: skyu-system
    - ports:
        - protocol: UDP
          port: 53
